# mfmc-python

./: .gitattributes  README.md  definitions.py  pyproject.toml
mfmc/: __init__.py  _exceptions.py  _group.py  _law.py  _probe.py  _sequence.py  file.py  format.yml  group.py  law.py  probe.py  sequence.py  types.yml
mfmc/read/: __init__.pyi  _group.py  _types.py  file.py  law.py  probe.py  sequence.py
mfmc/write/: __init__.py
tests/: example mfmc file.mfmc  test_file.py
