[project]
authors = [
    {name = "Bruce Cowan", email = "bruce.cowan@strath.ac.uk"},
]
requires-python = ">=3.10,<4.0"
name = "mfmc"
version = "0.1.alpha"
description = "A Python package for the MFMC ultrasound data format"

dependencies = [
    "h5py>=3.8,<4.0",
    "lazy-loader>=0.4",
]

[tool.pdm.dev-dependencies]
dev = [
    "black>=24,<25",
    "numpy>=1.24,<2.0",
    "ruff>=0.4.0,<0.5.0",
]

[tool.black]
target-version = ["py310"]
