[project]
authors = [
    {name = "Bruce Cowan", email = "bruce.cowan@strath.ac.uk"},
]
requires-python = ">=3.12"
name = "mfmc"
version = "0.1.alpha"
description = "A Python package for the MFMC ultrasound data format"

dependencies = [
    "h5py>=3.8,<4.0",
    "numpy>=1.24.0",
    "PyYAML>=6.0.2",
]

[tool.black]
target-version = ["py312"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.10",
]
